pastey-test-suite/tests/ui/env-non-literal-arg.rs
use pastey::paste;

paste! {
    fn [<env!(foo)>]() {}
}

fn main() {}
